Html & CSS Update

--- a/Code Files/html_file.html
+++ b/Code Files/html_file.html
@@ -7,8 +7,33 @@
     <title> ToDo List </title>
     </head>
 
+        <style>
+            .display {
+                height: 40%;
+                width: 80%;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%,-50%);
+                position: absolute;
+                background-color: pink;
+            }
+
+            .add_box {
+                height: 20%;
+                width: 40%;
+                top: 75%;
+                left: 10%;
+                position: absolute;
+                background-color: plum;
+            }
+        </style>
+
     <body>
         <h1>ToDo List</h1>
+
+        <div class="display">
+
+        </div>
 
         <div class="add_box">
 
@@ -24,7 +49,7 @@
             </div>
             
             <button class="add_task"> Add </button>
-            
+
         </div>
 
         <ul id="tasks">
