--- a/Code Files/html_file.html
+++ b/Code Files/html_file.html
@@ -33,6 +33,21 @@
         <h1>ToDo List</h1>
 
         <div class="display">
+            <h1>Weekly Calendar</h1>
+
+            <table id="week">
+                <thead>
+                    <tr>
+                        <th>Monday</th>
+                        <th>Tuesday</th>
+                        <th>Wednesday</th>
+                        <th>Thursday</th>
+                        <th>Friday</th>
+                        <th>Saturday</th>
+                        <th>Sunday</th>
+                    </tr>
+                </thead>
+            </table>
 
         </div>
 
