--- a/Code Files/html_file.html
+++ b/Code Files/html_file.html
@@ -7,35 +7,13 @@
     <title> ToDo List </title>
     </head>
 
-        <style>
-            .display {
-                height: 60%;
-                width: 90%;
-                top: 48%;
-                left: 50%;
-                transform: translate(-50%, -60%);
-                position: absolute;
-                background-color: pink;
-            }
-
-            .add_box {
-                height: 20%;
-                width: 40%;
-                top: 80%;
-                left: 10%;
-                transform: translate(-13%, -20%);
-                position: absolute;
-                background-color: plum;
-            }
-        </style>
-
     <body>
         <h1>ToDo List</h1>
 
         <div class="display">
             <h1>Weekly Calendar</h1>
 
-            <table id="week">
+            <table id="weekly">
                 <thead>
                     <tr>
                         <th>Monday</th>
