js and unordered list addition

--- a/Code Files/html_file.html
+++ b/Code Files/html_file.html
@@ -49,9 +49,19 @@
             </div>
         </div>
 
-        <ul id="tasks">
+        <ul id="sun_tasks"> </ul>
 
-        </ul>
+        <ul id="mon_tasks"> </ul>
+
+        <ul id="tue_tasks"> </ul>
+
+        <ul id="wed_tasks"> </ul>
+
+        <ul id="thu_tasks"> </ul>
+
+        <ul id="fri_tasks"> </ul>
+        
+        <ul id="sat_tasks"> </ul>
 
     </body>
 
