Move unordered list into the table; change CSS

--- a/Code Files/html_file.html
+++ b/Code Files/html_file.html
@@ -25,6 +25,37 @@
                         <th>Saturday</th>
                     </tr>
                 </thead>
+
+                <tbody>
+                    <td>
+                        <ul id="sun_tasks"> </ul>
+                    </td>
+
+                    <td>
+                        <ul id="mon_tasks"></ul>
+                    </td>
+
+                    <td>
+                        <ul id="tue_tasks"> </ul>
+                    </td>
+
+                    <td>
+                        <ul id="wed_tasks"> </ul>
+                    </td>
+
+                    <td>
+                        <ul id="thu_tasks"> </ul>
+                    </td>
+
+                    <td>
+                        <ul id="fri_tasks"> </ul>
+                    </td>
+
+                    <td>
+                        <ul id="sat_tasks"> </ul>
+                    </td>
+                    
+                </tbody>
             </table>
         </div>
 
@@ -48,20 +79,6 @@
                 </form>
             </div>
         </div>
-
-        <ul id="sun_tasks"> </ul>
-
-        <ul id="mon_tasks"> </ul>
-
-        <ul id="tue_tasks"> </ul>
-
-        <ul id="wed_tasks"> </ul>
-
-        <ul id="thu_tasks"> </ul>
-
-        <ul id="fri_tasks"> </ul>
-        
-        <ul id="sat_tasks"> </ul>
 
     </body>
 
