--- a/Code Files/html_file.html
+++ b/Code Files/html_file.html
@@ -28,31 +28,31 @@
 
                 <tbody>
                     <td>
-                        <ul id="sun_tasks"> </ul>
+                        <ul id="sunday"> </ul>
                     </td>
 
                     <td>
-                        <ul id="mon_tasks"></ul>
+                        <ul id="monday"></ul>
                     </td>
 
                     <td>
-                        <ul id="tue_tasks"> </ul>
+                        <ul id="tuesday"> </ul>
                     </td>
 
                     <td>
-                        <ul id="wed_tasks"> </ul>
+                        <ul id="wednesday"> </ul>
                     </td>
 
                     <td>
-                        <ul id="thu_tasks"> </ul>
+                        <ul id="thursday"> </ul>
                     </td>
 
                     <td>
-                        <ul id="fri_tasks"> </ul>
+                        <ul id="friday"> </ul>
                     </td>
 
                     <td>
-                        <ul id="sat_tasks"> </ul>
+                        <ul id="saturday"> </ul>
                     </td>
                     
                 </tbody>
