--- a/Code Files/html_file.html
+++ b/Code Files/html_file.html
@@ -75,7 +75,7 @@
                 <form id = 'add_task'>
                     <label for = 'add_task'>Add your task:  </label>
                     <input id = 'add_task' type="text" name="add_task">
-                    <button type = 'submit' id = 'Add_task_btn'> Add </button>
+                    <button type = 'submit' id = 'add_task_btn'> Add </button>
                 </form>
             </div>
         </div>
