--- a/code_files/index.html
+++ b/code_files/index.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css_file.css" type="text/css" />
+    <link rel="stylesheet" href="style.css" type="text/css" />
     <title> ToDo List </title>
     </head>
 
@@ -91,6 +91,6 @@
 
     </body>
 
-    <script src="javascript_file.js"> </script>
+    <script src="main.js"> </script>
 
 </html>
