This commit contains an addition and test for the Delete Function.

--- a/code_files/index.html
+++ b/code_files/index.html
@@ -87,6 +87,7 @@
             
             <br>
             <button type = 'submit' id = 'add_task_btn'> Add </button>
+            <button type = 'button' id = 'delete_task_btn'> Delete </button>
         </div>
 
     </body>
