Changed the unordered lists to ordered lists

--- a/code_files/index.html
+++ b/code_files/index.html
@@ -28,31 +28,31 @@
 
                 <tbody>
                     <td>
-                        <ul id="sunday"> </ul>
+                        <ol type="1" id="sunday"> </ol>
                     </td>
 
                     <td>
-                        <ul id="monday"></ul>
+                        <ol type="1" id="monday"></ol>
                     </td>
 
                     <td>
-                        <ul id="tuesday"> </ul>
+                        <ol type="1" id="tuesday"> </ol>
                     </td>
 
                     <td>
-                        <ul id="wednesday"> </ul>
+                        <ol type="1" id="wednesday"> </ol>
                     </td>
 
                     <td>
-                        <ul id="thursday"> </ul>
+                        <ol type="1" id="thursday"> </ol>
                     </td>
 
                     <td>
-                        <ul id="friday"> </ul>
+                        <ol type="1" id="friday"> </ol>
                     </td>
 
                     <td>
-                        <ul id="saturday"> </ul>
+                        <ol type="1" id="saturday"> </ol>
                     </td>
                     
                 </tbody>
