Working on the delete file drop

--- a/code_files/index.html
+++ b/code_files/index.html
@@ -94,8 +94,8 @@
             <br>
             <div class="del_input_day">
                 <form>
-                    <label for = 'add_day'>Select day:</label>
-                    <select id = 'add_day' name="add_day">
+                    <label for = 'delete_day'>Select day:</label>
+                    <select id = 'delete_day' name="delete_day">
                         <option value="monday">Monday</option>
                         <option value="tuesday">Tuesday</option>
                         <option value="wednesday">Wednesday</option>
