Update the function of updating delete taskbar

--- a/code_files/index.html
+++ b/code_files/index.html
@@ -113,13 +113,7 @@
                 <form>
                     <label for = 'choose_task'>Select task:</label>
                     <select id = 'choose_task' name="choose_task">
-                        <option value="monday">Monday</option>
-                        <option value="tuesday">Tuesday</option>
-                        <option value="wednesday">Wednesday</option>
-                        <option value="thursday">Thursday</option>
-                        <option value="friday">Friday</option>
-                        <option value="saturday">Saturday</option>
-                        <option value="sunday">Sunday</option>
+                        <!-- Options will be added here based on the selected day -->
                     </select>
                 </form>
 
